--- a/MoodAnalyzerProgram/MoodAnalyzerProgram/MoodAnalyzerProgram.csproj
+++ b/MoodAnalyzerProgram/MoodAnalyzerProgram/MoodAnalyzerProgram.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CustomException.cs" />
+    <Compile Include="MoodAnalyserFactory.cs" />
     <Compile Include="MoodAnalyzer1.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
